--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Nov 30 04:30:01 GMT 2016
+#Thu Dec 01 06:16:24 GMT 2016
 eclipse.preferences.version=1
+encoding/FileManager.php=UTF-8
 encoding/index.html=UTF-8
